# TangoBot

./: .env  README.md  embeds.py  hypebot.py  main.py  pyproject.toml  requirements.txt  runbot.py
cogs/: alert.py  core.py  onboarding.py  welcome.py
